# stl-to-voxel

./: .gitignore  LICENCE.md  README.md  UnionFind.py  perimeter.py  poly_tri.py  pyproject.toml  requirements.txt  setup.py  slice.py  stl_reader.py  stl_to_images.py  stltovoxel.py  test_perimeter.py  test_slice.py  testperimeter.py  testslice.py  util.py
.github/workflows/: python-lint-and-test.yml  python-package.yml
data/: HalfDonut.stl  Moon.stl  Pyramid.stl  Star.stl  cube_hole.stl  cube_rotated.stl  cylinder.stl  sphere.stl  test1.stl  test2.stl  tetrahedron.stl  tetrahedron_hole.stl
stltovoxel/: __init__.py  __main__.py  convert.py  main.py  perimeter.py  playground.py  polygon_repair.py  slice.py  visualization.py  winding.py  winding_query.py
test/: context.py  test_export.py  test_main.py  test_perimeter.py  test_polygon_repair.py  test_slice.py  test_winding_query.py
tests/: test_main.py  test_perimeter.py  test_polygon_repair.py  test_slice.py
