[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stl-to-voxel"
packages = [
    { include = "stltovoxel" },
]
version = "v0.0.0"
description = "Turn STL files into voxels, images, and videos"
readme = "README.md"
authors = ["Christian Pederkoff"]
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ['numpy', 'Pillow', 'numpy-stl']
repository = "https://github.com/cpederkoff/stl-to-voxel"


[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.13"
Pillow = ">=10.0.1"
numpy-stl = "^2.17"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
flake8 = "^5.0.4"
pep8-naming = "^0.13.2"

[tool.poetry.scripts]
stltovoxel = "stltovoxel.__main__:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
